--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -2,14 +2,13 @@ FROM python:3.10
 
 ENV PYTHONUNBUFFERED=1
 
-# RUN mkdir /test_docker
-WORKDIR /catalyst_docker
+WORKDIR /CatalystMediaTask
 
-COPY . /catalyst_docker
-COPY requirements.txt /catalyst_docker
+COPY . /CatalystMediaTask
+COPY requirements.txt /CatalystMediaTask
 
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
-COPY . /catalyst_docker
+COPY . /CatalystMediaTask
 
 CMD ["python3", "manage.py", "runserver", "0.0.0.0:8000"]
