--- a/docker.env
+++ b/docker.env
@@ -1,11 +1,19 @@
+
+
 SECRET_KEY=_0edkzbm$r-0j7s@ox#v#6rq)r-o7zi+bl21!(b6fwk+2zsms2
+
 
 # DATABASE SETTINGS
 DB_NAME=catalystmediadb
 DB_USER=postgres
 DB_PASSWORD=123
-DB_HOST=localhost
+DB_HOST=db
 DB_PORT=5432
+
 
 # MODE OF THE APP
 DEBUG=True
+
+
+nlq=your_value_here
+r=your_value_here
